Fix workdir configuration